userChrome.css
/*:: https://firefox-source-docs.mozilla.org/devtools-user/browser_toolbox/index.html */
/*:: https://mrotherguy.github.io/firefox-csshacks/ */
/*:: BASICS */
:root {
  #titlebar {
    margin-bottom: -4px;
    background: #2f2e37;
  }
  button,
  .tab-background {
    border-radius: 6px 6px 0 0 !important;
  }
  /* bookmark bg   */
  --toolbar-bgcolor: #1c1b22 !important;
  #nav-bar {
    background: #1c1b22 !important;
    border-bottom: 2px solid #2f2e37 !important;
  }
  .tabbrowser-tab[selected="true"] .tab-content {
    color: #fff; /* Remplace #FF5733 par la couleur de ton choix */
    background-color: #1c1b22 !important; /* Remplace #FF5733 par la couleur de ton choix */
  }
}

/*:: AUTO HIDE PRIVACY AND PERMISSIONS IN URL */
/* https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/urlbar_info_icons_on_hover.css */

#urlbar-search-button,
#tracking-protection-icon-container,
#identity-box,
#identity-box.extensionPage #identity-icon-label {
  max-width: 0px;
  opacity: 0.2;
  transition: 3000ms linear !important;
  overflow: hidden;
}

#identity-box.extensionPage {
  max-width: 3200px;
}

#urlbar:hover #urlbar-input-container > box,
#urlbar:hover #identity-box.extensionPage #identity-icon-label {
  max-width: 300px;
}

/*:: AUTO HIDE BOOKMARK STAR */
/* https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/page_action_buttons_on_urlbar_hover.css */

.urlbar-page-action {
  opacity: 0;
  transition: opacity 200ms linear;
}

#urlbar:hover .urlbar-page-action,
.urlbar-page-action[open] ~ .urlbar-page-action {
  opacity: 0.2;
  margin-inline-end: 0px !important;
}

/*:: BOOKMARK W10 */
/* This style makes menus from bookmarks toolbar folders look like context menus do (on Win10) which was the behavior pre-fx92 */
/* https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/menulike_bookmarks_folder_popups.css */

menupopup[placespopup="true"] {
  padding: 0 !important;
  margin: 0 !important;
  --arrowpanel-background: var(--menu-background-color, Menu) !important;
  border-radius: var(--panel-border-radius) !important;
}
.menupopup-arrowscrollbox {
  margin-top: 1px !important;
  border: 1px solid var(--panel-border-color) !important;
  padding: var(--panel-padding) !important;
  border-radius: var(--panel-border-radius) !important;
}
:where(menupopup[placespopup="true"]) menu,
:where(menupopup[placespopup="true"]) menuitem {
  margin-inline: 0 !important;
  padding-inline-start: 1em !important;
  border-radius: 0 !important;
  padding-block: 0.5em !important;
}

/*:: BOOKMARK AUTO HIDE */
/* https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/autohide_bookmarks_toolbar.css */

#PersonalToolbar {
  --uc-bm-height: 22px; /* Might need to adjust if the toolbar has other buttons */
  --uc-bm-padding: 4px; /* Vertical padding to be applied to bookmarks */
  --uc-autohide-toolbar-delay: 600ms; /* The toolbar is hidden after 0.6s */

  /* 0deg = "show" ; 90deg = "hide" ;  Set the following to control when bookmarks are shown */
  --uc-autohide-toolbar-focus-rotation: 0deg; /* urlbar is focused */
  --uc-autohide-toolbar-hover-rotation: 0deg; /* cursor is over the toolbar area */
}

:root[uidensity="touch"] #PersonalToolbar {
  --uc-bm-padding: 7px;
}

#PersonalToolbar:not([customizing]) {
  position: relative;
  margin-bottom: calc(-1px - var(--uc-bm-height) - 2 * var(--uc-bm-padding));
  transform: rotateX(90deg);
  transform-origin: top;
  transition: transform 135ms linear var(--uc-autohide-toolbar-delay) !important;
  z-index: 1;
  /* The following properties should allow the themes with trasparent toolbars to work */
  background-color: transparent !important;
  background-repeat: no-repeat, no-repeat, var(--lwt-background-tiling);
  /* y position will be wrong if menubar is enabled... */
  --uc-bg-y: calc(
    -2 * (
        var(--tab-block-margin) + var(--toolbarbutton-inner-padding) +
          var(--toolbarbutton-outer-padding)
      ) - var(--tab-min-height) - 24px - var(--bookmark-block-padding)
  );
  background-position: top left, top left,
    var(--lwt-background-alignment, top left);
  background-position-y: top, top, var(--uc-bg-y), var(--uc-bg-y),
    var(--uc-bg-y);
  background-image: var(
      --toolbar-bgimage,
      linear-gradient(transparent, transparent)
    ),
    linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)),
    var(--lwt-header-image, var(--lwt-additional-images)) !important;
}
:root[uidensity="compact"] #PersonalToolbar {
  --toolbarbutton-outer-padding: 1px !important;
}
/* This is a workaround for fx 119 specifically for users that use default theme, should remove when 120 is released. See bug 1853524 */
#PersonalToolbar:not(:-moz-lwtheme) {
  --toolbar-bgcolor: #f9f9fb;
}
/* ...and for dark variant */
@media (prefers-color-scheme: dark) {
  #PersonalToolbar:not(:-moz-lwtheme) {
    --toolbar-bgcolor: rgb(43, 42, 51);
  }
}
#PlacesToolbarItems > .bookmark-item,
#OtherBookmarks,
#PersonalToolbar > #import-button {
  padding-block: var(--uc-bm-padding) !important;
}

#nav-bar:focus-within + #PersonalToolbar {
  transition-delay: 100ms !important;
  transform: rotateX(var(--uc-autohide-toolbar-focus-rotation, 0));
}
#navigator-toolbox:is(:hover, :focus-within) {
  border-bottom-color: transparent !important;
}
#navigator-toolbox:hover > #PersonalToolbar {
  transition-delay: 100ms !important;
  transform: rotateX(var(--uc-autohide-toolbar-hover-rotation, 0));
}

#navigator-toolbox:hover > #nav-bar:focus-within + #PersonalToolbar {
  transform: rotateX(0);
}

/*:: GLOW EFFECTS BUTTONS */
/* https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/button_effect_icon_glow.css */
/* Replace the button background-colors with a glow effect */
/* Edit the color choices how you see fit */

:root {
  --uc-icon-glow-primary: cyan;
  --uc-icon-glow-secondary: cadetblue;
  --uc-icon-glow-hover-primary: red;
  --uc-icon-glow-hover-secondary: yellow;
}
/* ... */

